Fix align of stamp - left => right

--- a/assets/scss/_grid.scss
+++ b/assets/scss/_grid.scss
@@ -52,7 +52,7 @@
 }
 .grid-stamp-top-right{
 	top: 0;
-	left: 0;
+	right: 0;
 }
 
 
